# study-rust

./: Cargo.toml  flash.cfg  memory.x
.cargo/: config.toml
src/: main.rs
